--- a/src/debugger.ipynb
+++ b/src/debugger.ipynb
@@ -9,7 +9,7 @@
                 "%load_ext autoreload\n",
                 "%autoreload 2\n",
                 "import os \n",
-                "os.environ['CUDA_VISIBLE_DEVICES'] = '3'"
+                "os.environ['CUDA_VISIBLE_DEVICES'] = ''"
             ]
         },
         {
@@ -40,24 +40,30 @@
                 }
             ],
             "source": [
-                "import numpy as np\n",
-                "n_det = 10\n",
-                "n_j = 3\n",
-                "x = [(1, 2, 3) for i in range(n_det)]\n",
-                "x = [i for lst in x for i in lst]\n",
-                "\n",
-                "x = [i for i in range(9)]\n",
-                "\n",
-                "x = np.array([x for j in range(n_j)])\n",
-                "\n",
-                "x = np.array([[i for i in range(*n)] for n in ((0,9), (9,18), (18, 27))])\n",
-                "\n",
-                "print(x)\n",
-                "y = x.reshape(n_j, 3, -1, order='F')\n",
-                "print(y[1])\n",
-                "z = x.reshape(n_j, 3, -1)\n",
-                "print(z[0])\n",
-                "print(np.linalg.norm(y, axis=1), '\\n', np.linalg.norm(z, axis=1))"
+                "def generate_k_points(n_shells=3):\n",
+                "    img_range = jnp.arange(-3, 3+1)  # preset, when are we ever going to use more\n",
+                "    img_sets = jnp.array(list(product(*[img_range, img_range, img_range])))\n",
+                "    norms = jnp.linalg.norm(img_sets, axis=-1)\n",
+                "    idxs = jnp.argsort(norms)\n",
+                "    img_sets, norms = img_sets[idxs], norms[idxs]\n",
+                "    norm = 0.\n",
+                "    k_shells = {norm: [jnp.array([0.0, 0.0, 0.0])]}  # leacing the dictionary logic in case we ever need this data structure\n",
+                "    for k_point, norm_tmp in zip(img_sets[1:], norms[1:]):\n",
+                "        if norm_tmp > norm:\n",
+                "            if len(k_shells) == n_shells:\n",
+                "                break\n",
+                "            norm = norm_tmp\n",
+                "            k_shells[norm] = [k_point]\n",
+                "        else:\n",
+                "            if np.any([(k_point == x).all() for x in k_shells[norm]]):\n",
+                "                continue # because we include the opposite k_point in the sequence this statement avoids repeats\n",
+                "            k_shells[norm].append(k_point)\n",
+                "        k_shells[norm].append(-k_point)\n",
+                "    k_points = []\n",
+                "    for k, v in k_shells.items():\n",
+                "        for k_point in v:\n",
+                "            k_points.append(k_point)\n",
+                "    return k_points"
             ]
         },
         {
