--- a/src/demo_notebook.ipynb
+++ b/src/demo_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,141 +29,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s64_p16_l3_det4 adam_1lr-4_1d-3_1nc-4_m512_ Reference\n",
-      "version \t\t 081021\n",
-      "seed \t\t 369\n",
-      "n_devices \t\t 1\n",
-      "save_every \t\t 2500\n",
-      "print_every \t\t 100\n",
-      "exp_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/081021/Reference/adam_1lr-4_1d-3_1nc-4_m512_s64_p16_l3_det4/run0\n",
-      "events_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/081021/Reference/adam_1lr-4_1d-3_1nc-4_m512_s64_p16_l3_det4/run0/events\n",
-      "models_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/081021/Reference/adam_1lr-4_1d-3_1nc-4_m512_s64_p16_l3_det4/run0/models\n",
-      "opt_state_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/081021/Reference/adam_1lr-4_1d-3_1nc-4_m512_s64_p16_l3_det4/run0/models/opt_state\n",
-      "pre_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/pretrained/s64_p16_l3_det4_1lr-4_i0.pk\n",
-      "timing_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/081021/Reference/adam_1lr-4_1d-3_1nc-4_m512_s64_p16_l3_det4/run0/events/timing\n",
-      "csv_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/081021/Reference/adam_1lr-4_1d-3_1nc-4_m512_s64_p16_l3_det4/run0/config1.csv\n",
-      "pk_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/081021/Reference/adam_1lr-4_1d-3_1nc-4_m512_s64_p16_l3_det4/run0/config1.pk\n",
-      "system \t\t LiSolidBCC\n",
-      "r_atoms \t\t [[0.  0.  0. ]\n",
-      " [0.5 0.5 0.5]]\n",
-      "z_atoms \t\t [3. 3.]\n",
-      "n_el \t\t 6\n",
-      "n_el_atoms \t\t [3 3]\n",
-      "periodic_boundaries \t\t True\n",
-      "real_basis \t\t [[1. 0. 0.]\n",
-      " [0. 1. 0.]\n",
-      " [0. 0. 1.]]\n",
-      "unit_cell_length \t\t 6.63\n",
-      "real_cut \t\t 6\n",
-      "reciprocal_cut \t\t 6\n",
-      "kappa \t\t 0.5\n",
-      "n_layers \t\t 3\n",
-      "n_sh \t\t 64\n",
-      "n_ph \t\t 16\n",
-      "n_det \t\t 4\n",
-      "scalar_inputs \t\t False\n",
-      "n_periodic_input \t\t 1\n",
-      "orbitals \t\t anisotropic\n",
-      "opt \t\t adam\n",
-      "lr \t\t 0.0001\n",
-      "damping \t\t 0.001\n",
-      "norm_constraint \t\t 0.0001\n",
-      "n_it \t\t 10000\n",
-      "load_it \t\t 0\n",
-      "n_walkers \t\t 512\n",
-      "n_walkers_per_device \t\t 512\n",
-      "step_size \t\t 0.02\n",
-      "correlation_length \t\t 10\n",
-      "pre_lr \t\t 0.0001\n",
-      "n_pre_it \t\t 0\n",
-      "load_pretrain \t\t False\n",
-      "pretrain \t\t False\n",
-      "System: \n",
-      " n_atoms = 2 \n",
-      " n_up    = 3 \n",
-      " n_down  = 3 \n",
-      " n_el    = 6 \n",
-      "\n",
-      "Ansatz: \n",
-      " n_layers = 3 \n",
-      " n_det    = 4 \n",
-      " n_sh     = 64 \n",
-      " n_ph     = 16 \n",
-      "\n",
-      "Cell: \n",
-      " real_basis: \n",
-      " [[6.63 0.   0.  ]\n",
-      " [0.   6.63 0.  ]\n",
-      " [0.   0.   6.63]] \n",
-      " reciprocal_basis: \n",
-      " [[0.94769007 0.         0.        ]\n",
-      " [0.         0.94769007 0.        ]\n",
-      " [0.         0.         0.94769007]] \n",
-      " real_cut         = 6.00 \n",
-      " reciprocal_cut   = 6 \n",
-      " kappa            = 0.50 \n",
-      " volume           = 291.43 \n",
-      " min_cell_width   = 6.63 \n",
-      " n_periodic_input = 1 \n",
-      " unit_cell_length = 6.63 \n",
-      "\n",
-      "converged SCF energy = -12.1628037018806\n",
-      "creating wf\n",
-      "sampling no infs, this could take a while\n",
-      "end sampling no infs\n"
+     "ename": "SystemExit",
+     "evalue": "unit cell length needed",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m unit cell length needed\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38430c80a7a4457e847388306b339c07",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "training:   0%|          | 1/10001 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "step 100 | e_mean -6.6853 | e_std 2.5262 | e_mean_mean -6.7083 | acceptance 0.6514 | t_per_it 0.1186 |\n",
-      "step 200 | e_mean -7.1401 | e_std 2.7743 | e_mean_mean -7.1069 | acceptance 0.4973 | t_per_it 0.1434 |\n",
-      "step 300 | e_mean -7.8109 | e_std 2.8011 | e_mean_mean -7.6890 | acceptance 0.5057 | t_per_it 0.1403 |\n",
-      "step 400 | e_mean -9.2545 | e_std 2.7817 | e_mean_mean -8.6165 | acceptance 0.4799 | t_per_it 0.1395 |\n",
-      "step 500 | e_mean -9.0962 | e_std 2.7344 | e_mean_mean -9.1089 | acceptance 0.5055 | t_per_it 0.1340 |\n"
+      "/home/amawi/.conda/envs/xmax/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3445: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
    "source": [
-    "cfg = setup(system='LiSolidBCC',\n",
+    "cfg = setup(system='HEG',\n",
     "                    n_pre_it=0,\n",
     "                    n_walkers=512,\n",
     "                    n_layers=2,\n",
-    "                    n_sh=32,\n",
-    "                    step_size=0.02,\n",
-    "                    n_ph=16,\n",
+    "                    n_sh=64,\n",
+    "                    step_size=0.05,\n",
+    "                    n_ph=32,\n",
+    "                    n_el=7,\n",
     "                    scalar_inputs=False,\n",
     "                    orbitals='anisotropic',\n",
     "                    n_periodic_input=1,\n",
-    "                    opt='kfac',\n",
+    "                    opt='adam',\n",
     "                    n_det=4,\n",
-    "                    print_every=100,\n",
+    "                    print_every=50,\n",
     "                    save_every=2500,\n",
     "                    lr=1e-4,\n",
-    "                    n_it=10000,\n",
-    "                    name=None)\n",
+    "                    n_it=30000,\n",
+    "                    density_parameter=1.,\n",
+    "                    name='heg_tests')\n",
     "log = run_vmc(cfg)"
    ]
   },
