post electron gas clean up solids working

--- a/src/demo_notebook.ipynb
+++ b/src/demo_notebook.ipynb
@@ -29,36 +29,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SystemExit",
-     "evalue": "unit cell length needed",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m unit cell length needed\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "version \t\t 211021\n",
+      "seed \t\t 369\n",
+      "n_devices \t\t 1\n",
+      "save_every \t\t 2500\n",
+      "print_every \t\t 50\n",
+      "exp_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/211021/heg_tests/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run4\n",
+      "events_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/211021/heg_tests/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run4/events\n",
+      "models_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/211021/heg_tests/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run4/models\n",
+      "opt_state_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/211021/heg_tests/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run4/models/opt_state\n",
+      "pre_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/pretrained/s64_p32_l2_det4_1lr-4_i0.pk\n",
+      "timing_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/211021/heg_tests/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run4/events/timing\n",
+      "csv_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/211021/heg_tests/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run4/config1.csv\n",
+      "pk_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/211021/heg_tests/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run4/config1.pk\n",
+      "periodic_boundaries \t\t True\n",
+      "real_basis \t\t [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "unit_cell_length \t\t 6.63\n",
+      "r_atoms \t\t [[0.  0.  0. ]\n",
+      " [0.5 0.5 0.5]]\n",
+      "z_atoms \t\t [3. 3.]\n",
+      "n_el_atoms \t\t [3 3]\n",
+      "n_el \t\t 6\n",
+      "system \t\t LiSolidBCC\n",
+      "real_cut \t\t 6\n",
+      "reciprocal_cut \t\t 6\n",
+      "kappa \t\t 0.5\n",
+      "n_layers \t\t 2\n",
+      "n_sh \t\t 64\n",
+      "n_ph \t\t 32\n",
+      "n_det \t\t 4\n",
+      "scalar_inputs \t\t False\n",
+      "n_periodic_input \t\t 1\n",
+      "orbitals \t\t anisotropic\n",
+      "opt \t\t adam\n",
+      "lr \t\t 0.0001\n",
+      "damping \t\t 0.001\n",
+      "norm_constraint \t\t 0.0001\n",
+      "n_it \t\t 30000\n",
+      "load_it \t\t 0\n",
+      "n_walkers \t\t 512\n",
+      "n_walkers_per_device \t\t 512\n",
+      "step_size \t\t 0.05\n",
+      "correlation_length \t\t 10\n",
+      "pre_lr \t\t 0.0001\n",
+      "n_pre_it \t\t 0\n",
+      "load_pretrain \t\t False\n",
+      "pretrain \t\t False\n",
+      "System: \n",
+      " n_atoms = 2 \n",
+      " n_up    = 3 \n",
+      " n_down  = 3 \n",
+      " n_el    = 6 \n",
+      "\n",
+      "Ansatz: \n",
+      " n_layers = 2 \n",
+      " n_det    = 4 \n",
+      " n_sh     = 64 \n",
+      " n_ph     = 32 \n",
+      "\n",
+      "Cell: \n",
+      " real_basis: \n",
+      " [[6.63 0.   0.  ]\n",
+      " [0.   6.63 0.  ]\n",
+      " [0.   0.   6.63]] \n",
+      " reciprocal_basis: \n",
+      " [[0.94769007 0.         0.        ]\n",
+      " [0.         0.94769007 0.        ]\n",
+      " [0.         0.         0.94769007]] \n",
+      " real_cut         = 6.00 \n",
+      " reciprocal_cut   = 6 \n",
+      " kappa            = 0.50 \n",
+      " volume           = 291.43 \n",
+      " min_cell_width   = 6.63 \n",
+      " n_periodic_input = 1 \n",
+      " unit_cell_length = 6.63 \n",
+      "\n",
+      "converged SCF energy = -12.1628037018806\n",
+      "creating wf\n",
+      "sampling no infs, this could take a while\n",
+      "end sampling no infs\n"
      ]
     },
     {
-     "name": "stderr",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f4b6e8536774dffac2420c68e786899",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "training:   0%|          | 1/30001 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/amawi/.conda/envs/xmax/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3445: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "step 50 | e_mean -11.6735 | e_std 4.6605 | e_mean_mean -11.5342 | acceptance 0.7012 | t_per_it 0.0636 |\n",
+      "step 100 | e_mean -13.0050 | e_std 4.8865 | e_mean_mean -13.0986 | acceptance 0.5594 | t_per_it 0.0641 |\n",
+      "step 150 | e_mean -13.5543 | e_std 5.0335 | e_mean_mean -13.4934 | acceptance 0.5061 | t_per_it 0.0644 |\n",
+      "step 200 | e_mean -14.1727 | e_std 7.4168 | e_mean_mean -13.8389 | acceptance 0.5023 | t_per_it 0.0646 |\n",
+      "step 250 | e_mean -14.8041 | e_std 6.9105 | e_mean_mean -15.0788 | acceptance 0.5016 | t_per_it 0.0648 |\n",
+      "step 300 | e_mean -16.2209 | e_std 5.4443 | e_mean_mean -15.8285 | acceptance 0.5006 | t_per_it 0.0649 |\n",
+      "step 350 | e_mean -15.9404 | e_std 6.1109 | e_mean_mean -16.4645 | acceptance 0.5066 | t_per_it 0.0649 |\n",
+      "step 400 | e_mean -17.5020 | e_std 4.4970 | e_mean_mean -16.5720 | acceptance 0.4848 | t_per_it 0.0649 |\n",
+      "step 450 | e_mean -16.5810 | e_std 4.7983 | e_mean_mean -17.0686 | acceptance 0.5232 | t_per_it 0.0650 |\n",
+      "step 500 | e_mean -17.4037 | e_std 4.6875 | e_mean_mean -17.1844 | acceptance 0.4934 | t_per_it 0.0650 |\n",
+      "step 550 | e_mean -17.4324 | e_std 4.0474 | e_mean_mean -17.5499 | acceptance 0.5117 | t_per_it 0.0650 |\n",
+      "step 600 | e_mean -16.8576 | e_std 4.4671 | e_mean_mean -17.6933 | acceptance 0.5016 | t_per_it 0.0650 |\n",
+      "step 650 | e_mean -16.4613 | e_std 5.2017 | e_mean_mean -17.7234 | acceptance 0.5014 | t_per_it 0.0650 |\n",
+      "step 700 | e_mean -18.1857 | e_std 4.9554 | e_mean_mean -17.4338 | acceptance 0.5027 | t_per_it 0.0650 |\n",
+      "step 750 | e_mean -18.4483 | e_std 4.7373 | e_mean_mean -17.7583 | acceptance 0.4863 | t_per_it 0.0650 |\n",
+      "step 800 | e_mean -16.7381 | e_std 4.2699 | e_mean_mean -17.8381 | acceptance 0.5021 | t_per_it 0.0650 |\n",
+      "step 850 | e_mean -18.2182 | e_std 4.2806 | e_mean_mean -18.0563 | acceptance 0.4936 | t_per_it 0.0651 |\n",
+      "step 900 | e_mean -18.3607 | e_std 4.6809 | e_mean_mean -18.4488 | acceptance 0.5000 | t_per_it 0.0651 |\n",
+      "step 950 | e_mean -18.4719 | e_std 5.4603 | e_mean_mean -18.6468 | acceptance 0.5076 | t_per_it 0.0651 |\n"
      ]
     }
    ],
    "source": [
-    "cfg = setup(system='HEG',\n",
+    "cfg = setup(system='LiSolidBCC',\n",
     "                    n_pre_it=0,\n",
     "                    n_walkers=512,\n",
     "                    n_layers=2,\n",
     "                    n_sh=64,\n",
     "                    step_size=0.05,\n",
     "                    n_ph=32,\n",
-    "                    n_el=7,\n",
     "                    scalar_inputs=False,\n",
     "                    orbitals='anisotropic',\n",
     "                    n_periodic_input=1,\n",
@@ -68,7 +176,6 @@
     "                    save_every=2500,\n",
     "                    lr=1e-4,\n",
     "                    n_it=30000,\n",
-    "                    density_parameter=1.,\n",
     "                    name='heg_tests')\n",
     "log = run_vmc(cfg)"
    ]
