--- a/src/module_test.ipynb
+++ b/src/module_test.ipynb
@@ -2,49 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import os \n",
     "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'\n",
     "# os.environ['XLA_PYTHON_CLIENT_MEM_FRACTION']='.85'\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nn_ansatz import *\n",
+    "\n",
+    "import jax\n",
+    "import jax.random as rnd\n",
+    "import jax.numpy as jnp\n",
+    "from jax import vmap, jit, grad, pmap\n",
+    "from jax.experimental.optimizers import adam\n",
+    "from jax import tree_util\n",
+    "from tqdm.notebook import trange\n",
+    "import math\n",
+    "from functools import partial\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "version \t\t 221021\n",
+      "version \t\t 261021\n",
       "seed \t\t 369\n",
       "n_devices \t\t 1\n",
       "save_every \t\t 2500\n",
       "print_every \t\t 50\n",
-      "exp_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/221021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10\n",
-      "events_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/221021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/events\n",
-      "models_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/221021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/models\n",
-      "opt_state_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/221021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/models/opt_state\n",
+      "exp_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/261021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run5\n",
+      "events_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/261021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run5/events\n",
+      "models_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/261021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run5/models\n",
+      "opt_state_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/261021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run5/models/opt_state\n",
       "pre_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/pretrained/s64_p32_l2_det4_1lr-4_i0.pk\n",
-      "timing_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/221021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/events/timing\n",
-      "csv_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/221021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/config20.csv\n",
-      "pk_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/221021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/config20.pk\n",
+      "timing_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/261021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run5/events/timing\n",
+      "csv_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/261021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run5/config1.csv\n",
+      "pk_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/261021/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run5/config1.pk\n",
       "pbc \t\t True\n",
       "basis \t\t [[1. 0. 0.]\n",
       " [0. 1. 0.]\n",
@@ -117,22 +128,8 @@
     }
    ],
    "source": [
-    "from nn_ansatz import *\n",
     "\n",
-    "# confirm antisymmetric\n",
     "\n",
-    "import jax\n",
-    "import jax.random as rnd\n",
-    "import jax.numpy as jnp\n",
-    "from jax import vmap, jit, grad, pmap\n",
-    "from jax.experimental.optimizers import adam\n",
-    "from jax import tree_util\n",
-    "from tqdm.notebook import trange\n",
-    "import math\n",
-    "from functools import partial\n",
-    "import itertools\n",
-    "\n",
-    "from nn_ansatz import *\n",
     "\n",
     "\n",
     "cfg = setup(system='LiSolidBCC',\n",
@@ -205,6 +202,89 @@
     "    return jnp.log(jnp.abs(sum_argument)) + logdet_max, sign\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check(x):\n",
+    "    return jnp.isnan(x).any() or jnp.isinf(x).any()\n",
+    "\n",
+    "if bool(os.environ.get('DISTRIBUTE')) is True:\n",
+    "    pwf = pmap(vwf, in_axes=(None, 0))\n",
+    "else:\n",
+    "    pwf = vwf\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(512, 6, 3) (2, 3)\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(walkers.shape, mol.r_atoms.shape)\n",
+    "log_psi = pwf(params, walkers)\n",
+    "\n",
+    "print(check(log_psi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(DeviceArray([67], dtype=int32),)\n",
+      "[[[3.2761474 3.494469  2.8931527]]]\n",
+      "[[0.    0.    0.   ]\n",
+      " [3.315 3.315 3.315]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Incompatible shapes for broadcasting: ((1, 2, 3), (1, 3, 1))",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-3a7d883e62dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwalkers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mr_atoms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcompute_single_stream_vectors_i\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwalkers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mr_atoms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv_basis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpbc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/projects/nn_ansatz/src/nn_ansatz/ansatz_base.py\u001b[0m in \u001b[0;36mcompute_single_stream_vectors_i\u001b[0;34m(walkers, r_atoms, basis, inv_basis, pbc)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mr_atoms\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mr_atoms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand_dims\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr_atoms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0msingle_stream_vectors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr_atoms\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0msingle_stream_vectors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpbc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0msingle_stream_vectors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapply_minimum_image_convention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msingle_stream_vectors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbasis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minv_basis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/xmax/lib/python3.7/site-packages/jax/_src/numpy/lax_numpy.py\u001b[0m in \u001b[0;36mdeferring_binary_op\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m   5922\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_scalar_types\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0m_arraylike_types\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTracer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5923\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5924\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mbinary_op\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5925\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mdeferring_binary_op\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5926\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "    \u001b[0;31m[... skipping hidden 12 frame]\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/xmax/lib/python3.7/site-packages/jax/_src/numpy/lax_numpy.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x1, x2)\u001b[0m\n\u001b[1;32m    423\u001b[0m     \u001b[0mfn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx2\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlax_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0m_promote_args_inexact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumpy_fn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    424\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 425\u001b[0;31m     \u001b[0mfn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx2\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlax_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0m_promote_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumpy_fn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    426\u001b[0m   \u001b[0mfn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    427\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mlax_doc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/xmax/lib/python3.7/site-packages/jax/_src/numpy/lax_numpy.py\u001b[0m in \u001b[0;36m_promote_args\u001b[0;34m(fun_name, *args)\u001b[0m\n\u001b[1;32m    325\u001b[0m   \u001b[0m_check_arraylike\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    326\u001b[0m   \u001b[0m_check_no_float0s\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 327\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0m_promote_shapes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0m_promote_dtypes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    328\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    329\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_promote_args_inexact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/xmax/lib/python3.7/site-packages/jax/_src/numpy/lax_numpy.py\u001b[0m in \u001b[0;36m_promote_shapes\u001b[0;34m(fun_name, *args)\u001b[0m\n\u001b[1;32m    245\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjax_numpy_rank_promotion\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"allow\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m         \u001b[0m_rank_promotion_warning_or_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshapes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 247\u001b[0;31m       \u001b[0mresult_rank\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbroadcast_shapes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    248\u001b[0m       return [broadcast_to(arg, (1,) * (result_rank - len(shp)) + shp)\n\u001b[1;32m    249\u001b[0m               for arg, shp in zip(args, shapes)]\n",
+      "    \u001b[0;31m[... skipping hidden 2 frame]\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/xmax/lib/python3.7/site-packages/jax/_src/lax/lax.py\u001b[0m in \u001b[0;36mbroadcast_shapes\u001b[0;34m(*shapes)\u001b[0m\n\u001b[1;32m     91\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mresult_shape\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m     raise ValueError(\"Incompatible shapes for broadcasting: {}\"\n\u001b[0;32m---> 93\u001b[0;31m                      .format(tuple(map(tuple, shapes))))\n\u001b[0m\u001b[1;32m     94\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mresult_shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Incompatible shapes for broadcasting: ((1, 2, 3), (1, 3, 1))"
+     ]
+    }
+   ],
+   "source": [
+    "walkers = jnp.squeeze(load_pk('walkers.pk'), axis=0)\n",
+    "e_locs = load_pk('e_locs.pk')\n",
+    "idx = jnp.where(jnp.isnan(e_locs))\n",
+    "print(idx)\n",
+    "print(walkers[0, idx])\n",
+    "print(mol.r_atoms)\n",
+    "print(compute_single_stream_vectors_i(jnp.squeeze(walkers[0, idx]), mol.r_atoms, mol.basis, mol.inv_basis, pbc=True))"
    ]
   },
   {
@@ -590,12 +670,8 @@
     }
    ],
    "source": [
-    "def check(x):\n",
-    "    return jnp.isnan(x).any() or jnp.isinf(x).any()\n",
-    "if bool(os.environ.get('DISTRIBUTE')) is True:\n",
-    "    pwf = pmap(vwf, in_axes=(None, 0))\n",
-    "else:\n",
-    "    pwf = vwf\n",
+    "\n",
+    "\n",
     "step_size = mol.step_size\n",
     "# walkers *= 0.\n",
     "for i in range(1000):\n",
