--- a/src/module_test.ipynb
+++ b/src/module_test.ipynb
@@ -11,7 +11,7 @@
     "import os \n",
     "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'\n",
     "# os.environ['XLA_PYTHON_CLIENT_MEM_FRACTION']='.85'\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '5'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = ''"
    ]
   },
   {
@@ -31,7 +31,31 @@
     "from tqdm.notebook import trange\n",
     "import math\n",
     "from functools import partial\n",
-    "import itertools"
+    "import itertools\n",
+    "import ase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "No suitable reference data for bulk H.  Reference data: {'symmetry': 'diatom', 'd': 0.74}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-bb487644d051>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbulk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbulk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'H'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morthorhombic\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.conda/envs/xmax/lib/python3.7/site-packages/ase/build/bulk.py\u001b[0m in \u001b[0;36mbulk\u001b[0;34m(name, crystalstructure, a, b, c, alpha, covera, u, orthorhombic, cubic, basis)\u001b[0m\n\u001b[1;32m     98\u001b[0m             raise ValueError('No suitable reference data for bulk {}.'\n\u001b[1;32m     99\u001b[0m                              \u001b[0;34m'  Reference data: {}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m                              .format(name, ref))\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcrystalstructure\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstructures\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: No suitable reference data for bulk H.  Reference data: {'symmetry': 'diatom', 'd': 0.74}"
+     ]
+    }
+   ],
+   "source": [
+    "from ase.build import bulk\n",
+    "x = bulk('H', orthorhombic=True)"
    ]
   },
   {
