--- a/src/exp/plotting.ipynb
+++ b/src/exp/plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,14 @@
     "%autoreload 2\n",
     "import sys\n",
     "import os\n",
-    "sys.path.append('/home/amawi/projects/nn_ansatz/src/')\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] ='3'\n",
+    "sys.path.append('..')\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] =''\n",
     "import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
    "source": [
     "from nn_ansatz import approximate_pair_distribution_function, load_pk\n",
     "from nn_ansatz.python_helpers import find_all_files_in_dir\n",
-    "from nn_ansatz.plot import plot_scatter\n",
+    "from nn_ansatz.plot import data_and_plot_scatter, get_data\n",
     "import numpy as np\n",
     "from bokeh.io import output_notebook\n",
     "from bokeh.palettes import Dark2_5 as palette\n",
@@ -54,6 +54,137 @@
     "import itertools\n",
     "\n",
     "output_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  version  seed  n_devices  save_every  print_every  \\\n",
+      "0  121121   369          1        5000         1000   \n",
+      "1  121121   369          1        5000         1000   \n",
+      "2  121121   369          1        5000         1000   \n",
+      "3  121121   369          1        5000         1000   \n",
+      "4  121121   369          1        5000         1000   \n",
+      "5  121121   369          1        5000         1000   \n",
+      "6  121121   369          1        5000         1000   \n",
+      "7  121121   369          1        5000         1000   \n",
+      "8  121121   369          1        5000         1000   \n",
+      "9  121121   369          1        5000         1000   \n",
+      "\n",
+      "                                             exp_dir  \\\n",
+      "0  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "1  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "2  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "3  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "4  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "5  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "6  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "7  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "8  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "9  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "\n",
+      "                                          events_dir  \\\n",
+      "0  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "1  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "2  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "3  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "4  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "5  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "6  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "7  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "8  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "9  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "\n",
+      "                                          models_dir  \\\n",
+      "0  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "1  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "2  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "3  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "4  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "5  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "6  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "7  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "8  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "9  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "\n",
+      "                                       opt_state_dir  \\\n",
+      "0  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "1  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "2  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "3  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "4  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "5  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "6  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "7  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "8  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "9  /home/energy/amawi/projects/nn_ansatz/src/expe...   \n",
+      "\n",
+      "                                            pre_path  ...    n_it load_it  \\\n",
+      "0  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "1  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "2  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "3  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "4  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "5  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "6  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "7  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "8  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "9  /home/energy/amawi/projects/nn_ansatz/src/expe...  ...  100000       0   \n",
+      "\n",
+      "  n_walkers  n_walkers_per_device step_size  correlation_length  pre_lr  \\\n",
+      "0       512                   512      0.05                  10  0.0001   \n",
+      "1       512                   512      0.05                  10  0.0001   \n",
+      "2       512                   512      0.05                  10  0.0001   \n",
+      "3       512                   512      0.05                  10  0.0001   \n",
+      "4       512                   512      0.05                  10  0.0001   \n",
+      "5       512                   512      0.05                  10  0.0001   \n",
+      "6       512                   512      0.05                  10  0.0001   \n",
+      "7       512                   512      0.05                  10  0.0001   \n",
+      "8       512                   512      0.05                  10  0.0001   \n",
+      "9       512                   512      0.05                  10  0.0001   \n",
+      "\n",
+      "  n_pre_it load_pretrain  pretrain  \n",
+      "0        0         False     False  \n",
+      "1        0         False     False  \n",
+      "2        0         False     False  \n",
+      "3        0         False     False  \n",
+      "4        0         False     False  \n",
+      "5        0         False     False  \n",
+      "6        0         False     False  \n",
+      "7        0         False     False  \n",
+      "8        0         False     False  \n",
+      "9        0         False     False  \n",
+      "\n",
+      "[10 rows x 49 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = get_data('/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/1211')\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "seed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.columns[1])"
    ]
   },
   {
@@ -126,6 +257,26 @@
     "\n",
     "graph.legend.location = 'top_right'\n",
     "show(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot a sweep\n",
+    "target_dirs = ['/home/amawi/projects/nn_ansatz/src/exp/experiments/HEG/1112/inact_act%s' % s for s in ['', '1', '2']]\n",
+    "data_filename = 'config1.pk'\n",
+    "hypam = 'density_parameter'\n",
+    "xname = 'equilibrated_energy_mean'\n",
+    "errname = 'equilibrated_energy_sem'\n",
+    "\n",
+    "df = plot_scatter(target_dir, data_filename, hypam, xname, errname, \n",
+    "title='converged energy vs density parameter', xlabel='density parameter', ylabel='energy')\n",
+    "df\n",
+    "\n",
+    "target_dir = '/home/amawi/projects/nn_ansatz/src/exp/experiments/HEG/bowl_density_sweep_HEG/kfac_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det1'\n"
    ]
   },
   {
