jastrow ready for test

--- a/src/debugger.ipynb
+++ b/src/debugger.ipynb
@@ -2,14 +2,52 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
                 "%load_ext autoreload\n",
                 "%autoreload 2\n",
                 "import os \n",
-                "os.environ['CUDA_VISIBLE_DEVICES'] = '3'"
+                "os.environ['CUDA_VISIBLE_DEVICES'] = ''"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import numpy as np\n",
+                "\n",
+                "def f(r):\n",
+                "    return [r**3, r**2, r, 1]\n",
+                "\n",
+                "def df(r):\n",
+                "    return [3*r**2, 2*r, 1, 0]\n",
+                "\n",
+                "def u(r, A, F):\n",
+                "    return (A / r) * (1 - np.exp(-r/F))\n",
+                "\n",
+                "def du(r, A, F):\n",
+                "    return (- A / r**2) * (1 - np.exp(-r/F)) + (A/(r*F)) * np.exp(-r/F)\n",
+                "\n",
+                "r_boundary = 1/4\n",
+                "r_edge = 1/2\n",
+                "\n",
+                "\n",
+                "\n",
+                "coefs = [f(r_boundary),\n",
+                "     df(r_boundary),\n",
+                "     f(r_edge),\n",
+                "     df(r_boundary)]\n",
+                "\n",
+                "res = [[u(r_boundary)],\n",
+                "     [du(r_boundary)],\n",
+                "     [u(r_edge)],\n",
+                "     [du(r_edge)]]\n",
+                "\n",
+                "np.inverse(coefs).dot(res)"
             ]
         },
         {
