--- a/src/exp/plotting.ipynb
+++ b/src/exp/plotting.ipynb
@@ -58,11 +58,10 @@
     "from nn_ansatz.plot import data_and_plot_scatter, get_data, plot_scatter\n",
     "import numpy as np\n",
     "from bokeh.io import output_notebook\n",
+    "output_notebook()\n",
     "from bokeh.palettes import Dark2_5 as palette\n",
     "from bokeh.plotting import figure, show\n",
-    "import itertools\n",
-    "\n",
-    "output_notebook()"
+    "import itertools\n"
    ]
   },
   {
